Merge 2.1.0 changes into master (#340)