@@ -1,7 +1,7 @@
 #!/bin/bash -f
 #
 # This script reconciles the elasticsearch indexes against what is loded
-# into stardog.  The --noconfig flag is for running in the dev environment
+# into graph db.  The --noconfig flag is for running in the dev environment
 # where the setenv.sh file does not exist.  The --force flag is used
 # to recompute indexes that already exist rather than skipping them.
 #
@@ -42,68 +42,125 @@ if [[ $historyFileOverride ]]; then
 fi
 echo ""
 
-# Setup configuration
-echo "  Setup configuration"
-if [[ $config -eq 1 ]]; then
-    APP_HOME=/local/content/evsrestapi
-    CONFIG_DIR=${APP_HOME}/${APP_NAME}/config
-    CONFIG_ENV_FILE=${CONFIG_DIR}/setenv.sh
-    echo "    config = $CONFIG_ENV_FILE"
-    . $CONFIG_ENV_FILE
-    if [[ $? -ne 0 ]]; then
-        echo "ERROR: $CONFIG_ENV_FILE does not exist or has a problem"
-        echo "       consider using --noconfig (if working in dev environment)"
-        exit 1
+# check status
+check_status() {
+    local retval=$1
+    local message=$2
+    if [ $retval -ne 0 ]; then
+      cat /tmp/x.$$
+      echo ""
+      echo "$message"
+      exit 1
     fi
-elif [[ -z $STARDOG_HOST ]]; then
-    echo "ERROR: STARDOG_HOST is not set"
-    exit 1
-elif [[ -z $STARDOG_PORT ]]; then
-    echo "ERROR: STARDOG_PORT is not set"
-    exit 1
-elif [[ -z $STARDOG_USERNAME ]]; then
-    echo "ERROR: STARDOG_USERNAME is not set"
-    exit 1
-elif [[ -z $STARDOG_PASSWORD ]]; then
-    echo "ERROR: STARDOG_PASSWORD is not set"
-    exit 1
-elif [[ -z $ES_SCHEME ]]; then
-    echo "ERROR: ES_SCHEME is not set"
-    exit 1
-elif [[ -z $ES_HOST ]]; then
-    echo "ERROR: ES_HOST is not set"
-    exit 1
-elif [[ -z $ES_PORT ]]; then
-    echo "ERROR: ES_PORT is not set"
-    exit 1
-fi
+}
+# check status
+check_http_status() {
+    retval=$1
+    message=$2
+    status=`tail -1 /tmp/x.$$`
+    if [ $status -ne $retval ]; then
+      echo ""
+      perl -pe 's/'$status'$//' /tmp/x.$$ | sed 's/^/    /'
+      echo "$message (returned $status)"
+      exit 1
+    fi
+}
 
+# Setup configuration
+setup_configuration() {
+  echo "  Setup configuration"
+  if [[ $config -eq 1 ]]; then
+      APP_HOME=/local/content/evsrestapi
+      CONFIG_DIR=${APP_HOME}/${APP_NAME}/config
+      CONFIG_ENV_FILE=${CONFIG_DIR}/setenv.sh
+      echo "    config = $CONFIG_ENV_FILE"
+    if [[ -e $CONFIG_ENV_FILE ]]; then
+      . $CONFIG_ENV_FILE
+    else
+          echo "ERROR: $CONFIG_ENV_FILE does not exist or has a problem"
+          echo "       consider using --noconfig (if working in dev environment)"
+          exit 1
+      fi
+  fi
+}
+
+setup_configuration
+l_graph_db_port=${GRAPH_DB_PORT:-"3030"}
+validate_setup() {
+  if [[ -n "$GRAPH_DB_USERNAME" ]]; then
+    l_graph_db_username="$GRAPH_DB_USERNAME"
+  else
+    echo "Error: GRAPH_DB_USERNAME is not set."
+    exit 1
+  fi
+  if [[ -n "$GRAPH_DB_PASSWORD" ]]; then
+    l_graph_db_password="$GRAPH_DB_PASSWORD"
+  else
+    echo "Error: GRAPH_DB_PASSWORD is not set."
+    exit 1
+  fi
+  if [[ -n "$GRAPH_DB_HOST" ]]; then
+    l_graph_db_host="$GRAPH_DB_HOST"
+  else
+    echo "Error: GRAPH_DB_HOST is not set."
+    exit 1
+  fi
+  if [[ -n "$GRAPH_DB_PORT" ]]; then
+    l_graph_db_port="$GRAPH_DB_PORT"
+  else
+    echo "Error: GRAPH_DB_PORT is not set."
+    exit 1
+  fi
+  if [[ -z $ES_SCHEME ]]; then
+      echo "ERROR: ES_SCHEME is not set"
+      exit 1
+  elif [[ -z $ES_HOST ]]; then
+      echo "ERROR: ES_HOST is not set"
+      exit 1
+  elif [[ -z $ES_PORT ]]; then
+      echo "ERROR: ES_PORT is not set"
+      exit 1
+  fi
+}
+validate_setup
+echo "    GRAPH_DB_PORT = $l_graph_db_port"
 if [[ $force -eq 1 ]]; then
     echo "  force = 1"
-elif [[ $ES_CLEAN == "true" ]]; then
-    echo "  force = 1 (ES_CLEAN=true)"
-    force=1
+#elif [[ $ES_CLEAN == "true" ]]; then
+#    echo "  force = 1 (ES_CLEAN=true)"
+#    force=1
 fi
 
 metadata_config_url=${CONFIG_BASE_URI:-"https://raw.githubusercontent.com/NCIEVS/evsrestapi-operations/main/config/metadata"}
 
-curl -s -g -u "${STARDOG_USERNAME}:$STARDOG_PASSWORD" \
-    "http://${STARDOG_HOST}:${STARDOG_PORT}/admin/databases" |\
-    $jq | perl -ne 's/\r//; $x=0 if /\]/; 
-            if ($x) { s/.* "//; s/",?$//; print "$_"; }; 
-            $x=1 if/\[/;' > /tmp/db.$$.txt
-if [[ $? -ne 0 ]]; then
-    echo "ERROR: unexpected problem listing databases"
-    exit 1
-fi
+get_databases(){
 
-echo "  databases = " `cat /tmp/db.$$.txt`
-ct=`cat /tmp/db.$$.txt | wc -l`
-if [[ $ct -eq 0 ]]; then
-    echo "ERROR: no stardog databases, this is unexpected"
-    exit 1
-fi
+  # Hardcode database names for now
+  cat > /tmp/db.$$.txt << EOF
+CTRP
+NCIT2
+EOF
 
+  # The following code requires "admin" call to Jena which is only allowed
+  # in deployment environments from "localhost".  Thus the evsrestapi server
+  # is not allowed to make this call.
+  #
+  ## this was put back to perl because we don't have python3 on the evsrestapi machines
+  #curl -w "\n%{http_code}" -s -g -u "${l_graph_db_username}:$l_graph_db_password" \
+  #    "http://${GRAPH_DB_HOST}:${GRAPH_DB_PORT}/\$/datasets" 2> /dev/null > /tmp/x.$$
+  #check_status $? "GET /admin/databases failed to list databases"
+  #check_http_status 200 "GET /admin/databases expecting 200"
+  #head -n -1 /tmp/x.$$ | $jq | grep 'ds.name' | perl -pe 's/.*ds.name.*\///; s/",.*//;' > /tmp/db.$$.txt
+  #echo "  databases = " `cat /tmp/db.$$.txt`
+  #ct=`cat /tmp/db.$$.txt | wc -l`
+  #if [[ $ct -eq 0 ]]; then
+  #    echo "ERROR: no graph databases, this is unexpected"
+  #    exit 1
+  #fi
+}
+
+
+get_databases
 # Open a new file descriptor that redirects to stdout:
 exec 3>&1
 
@@ -113,7 +170,7 @@ get_ignored_sources(){
     echo ""
   else
     curl -s -g -f "$metadata_config_url/ignore-source.txt" -o /tmp/is.$$.txt
-  if [[ $? -ne 0 ]]; then
+    if [[ $? -ne 0 ]]; then
       echo "Failed to download ignore-source.txt using curl, trying as a local file..." 1>&3
       cp "$metadata_config_url/ignore-source.txt" /tmp/is.$$.txt
       if [[ $? -ne 0 ]]; then
@@ -133,7 +190,8 @@ ignored_sources=$(get_ignored_sources)
 echo "Ignored source URLs:${ignored_sources}"
 
 # Prep query to read all version info
-echo "  Lookup terminology, version info in stardog"
+echo "  Lookup terminology, version info in graph db"
+get_graph_query(){
 if [ -n "$ignored_sources" ];then
 cat > /tmp/x.$$.txt << EOF
 query=PREFIX owl:<http://www.w3.org/2002/07/owl#>
@@ -183,16 +241,21 @@ select distinct ?source ?graphName ?version where {
 }
 EOF
 fi
-query=`cat /tmp/x.$$.txt`
-
+query=$(cat /tmp/x.$$.txt)
+}
+get_graph_query
 # Run the query against each of the databases
-/bin/rm -f /tmp/y.$$.txt
-touch /tmp/y.$$.txt
-for db in `cat /tmp/db.$$.txt`; do
-    curl -s -g -u "${STARDOG_USERNAME}:$STARDOG_PASSWORD" \
-        http://${STARDOG_HOST}:${STARDOG_PORT}/$db/query \
-        --data-urlencode "$query" -H "Accept: application/sparql-results+json" |\
-        $jq | perl -ne '
+get_graphs(){
+  /bin/rm -f /tmp/y.$$.txt
+  touch /tmp/y.$$.txt
+  # this was put back to perl because we don't have python3 on the evsrestapi machines
+  for db in `cat /tmp/db.$$.txt`; do
+      curl -w "\n%{http_code}"  -s -g -u "${l_graph_db_username}:$l_graph_db_password" \
+          http://${l_graph_db_host}:${l_graph_db_port}/$db/query \
+          --data-urlencode "$query" -H "Accept: application/sparql-results+json" 2> /dev/null > /tmp/x.$$
+      check_status $? "GET /$db/query failed to get graphs"
+      check_http_status 200 "GET /$db/query expecting 200"
+      head -n -1 /tmp/x.$$ | $jq | perl -ne '
             chop; $x="version" if /"version"/; 
             $x="source" if /"source"/; 
             $x=0 if /\}/; 
@@ -201,31 +264,29 @@ for db in `cat /tmp/db.$$.txt`; do
                 ${$x} = $_;                
                 print "$version|'$db'|$source\n" if $x eq "version"; 
             } ' >> /tmp/y.$$.txt
-    if [[ $? -ne 0 ]]; then
-        echo "ERROR: unexpected problem obtaining $db versions from stardog"
-        exit 1
-    fi
-done
-# Sort by version then reverse by DB (NCIT2 goes before CTRP)
-# this is because we need "monthly" to be indexed from the "monthlyDb"
-# defined in ncit.json
-# NOTE: version isn't cleaned up here so from where versionIRI is still an IRI
-sort -t\| -k 1,1 -k 2,2r -o /tmp/y.$$.txt /tmp/y.$$.txt
-cat /tmp/y.$$.txt | sed 's/^/    version = /;'
+  done
+  # Sort by version then reverse by DB (NCIT2 goes before CTRP)
+  # this is because we need "monthly" to be indexed from the "monthlyDb"
+  # defined in ncit.json
+  # NOTE: version isn't cleaned up here so from where versionIRI is still an IRI
+  sort -t\| -k 1,1 -k 2,2r -o /tmp/y.$$.txt /tmp/y.$$.txt
+  cat /tmp/y.$$.txt | sed 's/^/    version = /;'
+}
+get_graphs
 
-if [[ $ES_CLEAN == "true" ]]; then
-    echo "  Remove and recreate evs_metadata index"
-    curl -s -X DELETE "$ES_SCHEME://$ES_HOST:$ES_PORT/evs_metadata" >> /dev/null
-    if [[ $? -ne 0 ]]; then
-        echo "ERROR: unexpected error deleting evs_metadata index"
-        exit 1
-    fi
-    curl -s -X PUT "$ES_SCHEME://$ES_HOST:$ES_PORT/evs_metadata" >> /dev/null
-    if [[ $? -ne 0 ]]; then
-        echo "ERROR: unexpected error creating evs_metadata index"
-        exit 1
-    fi
-fi
+#if [[ $ES_CLEAN == "true" ]]; then
+#    echo "  Remove and recreate evs_metadata index"
+#    curl -s -X DELETE "$ES_SCHEME://$ES_HOST:$ES_PORT/evs_metadata" >> /dev/null
+#    if [[ $? -ne 0 ]]; then
+#        echo "ERROR: unexpected error deleting evs_metadata index"
+#        exit 1
+#    fi
+#    curl -s -X PUT "$ES_SCHEME://$ES_HOST:$ES_PORT/evs_metadata" >> /dev/null
+#    if [[ $? -ne 0 ]]; then
+#        echo "ERROR: unexpected error creating evs_metadata index"
+#        exit 1
+#    fi
+#fi
 
 # set the max number of fields higher
 # we can probably remove this when we figure a better answer
@@ -351,7 +412,7 @@ for x in `cat /tmp/y.$$.txt`; do
     done
 
     # Set up environment
-    export STARDOG_DB=$db
+    export GRAPH_DB=$db
     export EVS_SERVER_PORT="8083"
     
     if [[ $exists -eq 1 ]] && [[ $force -eq 0 ]]; then
@@ -363,11 +424,11 @@ for x in `cat /tmp/y.$$.txt`; do
         fi
         
         # Stale indexes are automatically cleaned up by the indexing process
-        # It checks against stardog and reconciles everything and updates latest flags
+        # It checks against graph db and reconciles everything and updates latest flags
         # regardless of whether there was new data
         echo "    RECONCILE $term stale indexes and update flags"
         export EVS_SERVER_PORT="8083"
-        java $local -XX:+ExitOnOutOfMemoryError -jar $jar --terminology ${term} --skipConcepts --skipMetadata > /tmp/x.$$.log 2>&1 
+        java --add-opens=java.base/java.io=ALL-UNNAMED $local -XX:+ExitOnOutOfMemoryError -jar $jar --terminology ${term} --skipConcepts --skipMetadata > /tmp/x.$$.log 2>&1 
         if [[ $? -ne 0 ]]; then
             cat /tmp/x.$$.log | sed 's/^/    /'
             echo "ERROR: unexpected error building indexes"
@@ -391,7 +452,7 @@ for x in `cat /tmp/y.$$.txt`; do
         fi
 
         # Run reindexing process (choose a port other than the one that it runs on)
-        echo "    Generate indexes for $STARDOG_DB ${term} $version"
+        echo "    Generate indexes for $GRAPH_DB ${term} $version"
         
         # Set the history clause for "ncit"
         historyClause=""
@@ -399,8 +460,8 @@ for x in `cat /tmp/y.$$.txt`; do
         	historyClause=" -d $historyFile"
         fi
 
-        echo "    java $local -Xm4096M -jar $jar --terminology ${term}_$version --realTime --forceDeleteIndex $historyClause"
-        java $local -XX:+ExitOnOutOfMemoryError -Xmx4096M -jar $jar --terminology "${term}_$version" --realTime --forceDeleteIndex $historyClause
+        echo "    java --add-opens=java.base/java.io=ALL-UNNAMED $local -Xm4096M -jar $jar --terminology ${term}_$version --realTime --forceDeleteIndex $historyClause"
+        java --add-opens=java.base/java.io=ALL-UNNAMED $local -XX:+ExitOnOutOfMemoryError -Xmx4096M -jar $jar --terminology "${term}_$version" --realTime --forceDeleteIndex $historyClause
         if [[ $? -ne 0 ]]; then
             echo "ERROR: unexpected error building indexes"
             exit 1
@@ -417,6 +478,22 @@ for x in `cat /tmp/y.$$.txt`; do
             exit 1
         fi
 
+		### This needs more work to run in local, dev, qa, stage, prod
+		### main issues are API_URL setting and the requirement to use npm
+		### which may not be installed or configured
+        ## get directory of reindex.sh
+        #ORIG_DIR=$(pwd)
+        #REINDEX_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}" )" &> /dev/null && pwd )
+        #cd "$REINDEX_DIR"
+        #mkdir -p "$REINDEX_DIR/postman_content_qa"
+        #"$REINDEX_DIR/postman.sh" "${term}" > "$REINDEX_DIR/postman_content_qa/${term}_postman_content_qa.txt"
+        #POSTMAN_EXIT=$?
+        #if [ $POSTMAN_EXIT -ne 0 ]; then
+        #    echo "Error: postman.sh failed with exit code $POSTMAN_EXIT"
+        #    exit $POSTMAN_EXIT
+        #fi
+        #cd "$ORIG_DIR"
+ 
     fi
 	
 	# Delete download directory for history file if it exists
@@ -434,11 +511,23 @@ done
 # Reconcile mappings after loading terminologies
 export EVS_SERVER_PORT="8083"
 echo "    Generate mapping indexes"
-echo "      java $local -Xm4096M -jar $jar --terminology mapping"
-java $local -XX:+ExitOnOutOfMemoryError -Xmx4096M -jar $jar --terminology mapping
+echo "      java --add-opens=java.base/java.io=ALL-UNNAMED $local -Xm4096M -jar $jar --terminology mapping"
+java --add-opens=java.base/java.io=ALL-UNNAMED $local -XX:+ExitOnOutOfMemoryError -Xmx4096M -jar $jar --terminology mapping
 if [[ $? -ne 0 ]]; then
     echo "ERROR: unexpected error building mapping indexes"
     exit 1
+fi
+
+# Verify that max_result_window on evs_mappings is set to 2500000
+if [[ `curl -s "$ES_SCHEME://$ES_HOST:$ES_PORT/evs_mappings/_settings" | grep -c max_result_window` -eq 0 ]]; then
+    # Set the indexes to have a larger max_result_window
+    echo "  Set max result window to 250000 for evs_mappings"
+    curl -s -X PUT "$ES_SCHEME://$ES_HOST:$ES_PORT/evs_mappings/_settings" \
+         -H "Content-type: application/json" -d '{ "index" : { "max_result_window" : 250000 } }' >> /dev/null
+    if [[ $? -ne 0 ]]; then
+        echo "ERROR: unexpected error setting max_result_window for evs_mappings"
+        exit 1
+    fi
 fi
 
 # Cleanup
